refactor: MM-92 Small clarity improvements to CommentInvestigator. (#75)
Reviewed-on: https://gitea.busybunyip.com/medical-models/medical-models-service/pulls/75
Co-authored-by: JonathonClifford <jono.cliff@gmail.com>
Co-committed-by: JonathonClifford <jono.cliff@gmail.com>